--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-	<div id="logs"></div>
+	<div id="wrapper"></div>	
 </body>
 <script src="built/main.js"></script>
 </html>
