--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+	<div id="canvas"></div>
 	<div id="wrapper"></div>
+
+	<div id="dashboard">
+		<div id="perks" data-legend="伊莎貝拉:">
+			<div id="HP" class="perkRow"><div class="row_key">HP</div><div class="tooltip bottom right">生命值</div></div>
+			<div id="MP" class="perkRow"><div class="row_key">MP</div><div class="tooltip bottom right">魔法值</div></div>
+			<div id="SP" class="perkRow"><div class="row_key">SP</div><div class="tooltip bottom right">體力值</div></div>
+			<div id="STR" class="perkRow"><div class="row_key">STR</div><div class="tooltip bottom right">力量代表肌肉力量、運動訓練、及能發揮多少肉體潛能。</div></div>
+			<div id="DEX" class="perkRow"><div class="row_key">DEX</div><div class="tooltip bottom right">敏捷代表機敏度、反射速度、平衡力。</div></div>
+			<div id="CON" class="perkRow"><div class="row_key">CON</div><div class="tooltip bottom right">體魄代表健康、耐力、生命力。</div></div>
+			<div id="INT" class="perkRow"><div class="row_key">INT</div><div class="tooltip bottom right">智力代表思考速度、記憶力、邏輯能力。</div></div>
+			<div id="WIS" class="perkRow"><div class="row_key">WIS</div><div class="tooltip bottom right">感知代表你對外在環境的觸覺，反映觀察力和洞察力。</div></div>
+			<div id="CHA" class="perkRow"><div class="row_key">CHA</div><div class="tooltip bottom right">魅力量度你跟他人有效地交流的能力。它代表了信心、口才，也能代表迷人或有力的個性。</div></div>
+		</div>	
+		<div id="inventory" data-legend="物品:">
+			<div id="i0" class="perkRow"><div class="row_key">蘋果</div><div class="tooltip bottom right">一個蘋果，食用隨機恢復 1d3 點 HP 和 1d3 點 SP。</div></div>
+			<div id="i1" class="perkRow"><div class="row_key">水鏡</div><div class="tooltip bottom right">少女慣用的愛劍，攻擊力 2d6。</div></div>
+			<div id="i2" class="perkRow"><div class="row_key">藍寶石項鏈</div><div class="tooltip bottom right">雕刻有美人女在石礁上唱歌的藍寶石項鏈。</div></div>
+		</div>	
+	</div>
 </body>
 </html>
