--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<div id="INT" class="perkRow"><div class="row_key">INT</div><div class="tooltip bottom right">智力代表思考速度、記憶力、邏輯能力。</div></div>
 			<div id="WIS" class="perkRow"><div class="row_key">WIS</div><div class="tooltip bottom right">感知代表你對外在環境的觸覺，反映觀察力和洞察力。</div></div>
 			<div id="CHA" class="perkRow"><div class="row_key">CHA</div><div class="tooltip bottom right">魅力量度你跟他人有效地交流的能力。它代表了信心、口才，也能代表迷人或有力的個性。</div></div>
+			<div id="TIME" class="perkRow"><div class="row_key">TIME</div><div class="tooltip bottom right">時刻。</div></div>
 		</div>	
 		<div id="inventory" data-legend="物品:">
 			<div id="i0" class="perkRow"><div class="row_key">蘋果</div><div class="tooltip bottom right">一個蘋果，食用隨機恢復 1d3 點 HP 和 1d3 點 SP。</div></div>
