--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <meta charset="utf-16"/>
 <head>
-	<title>[程序基础] Re:0 从 0 开始打造你的 Roguelike 游戏</title>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
+	<title>海之歌 Prototype</title>	
 	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -15,13 +14,14 @@
 			<div id="HP" class="perkRow"><div class="row_key">HP</div><div class="tooltip bottom right">生命值</div></div>
 			<div id="MP" class="perkRow"><div class="row_key">MP</div><div class="tooltip bottom right">魔法值</div></div>
 			<div id="SP" class="perkRow"><div class="row_key">SP</div><div class="tooltip bottom right">體力值</div></div>
-			<div id="STR" class="perkRow"><div class="row_key">STR</div><div class="tooltip bottom right">力量代表肌肉力量、運動訓練、及能發揮多少肉體潛能。</div></div>
-			<div id="DEX" class="perkRow"><div class="row_key">DEX</div><div class="tooltip bottom right">敏捷代表機敏度、反射速度、平衡力。</div></div>
-			<div id="CON" class="perkRow"><div class="row_key">CON</div><div class="tooltip bottom right">體魄代表健康、耐力、生命力。</div></div>
-			<div id="INT" class="perkRow"><div class="row_key">INT</div><div class="tooltip bottom right">智力代表思考速度、記憶力、邏輯能力。</div></div>
-			<div id="WIS" class="perkRow"><div class="row_key">WIS</div><div class="tooltip bottom right">感知代表你對外在環境的觸覺，反映觀察力和洞察力。</div></div>
-			<div id="CHA" class="perkRow"><div class="row_key">CHA</div><div class="tooltip bottom right">魅力量度你跟他人有效地交流的能力。它代表了信心、口才，也能代表迷人或有力的個性。</div></div>
-			<div id="TIME" class="perkRow"><div class="row_key">TIME</div><div class="tooltip bottom right">時刻。</div></div>
+			<div id="STR" class="perkRow"><div class="row_key">STR</div><div class="tooltip bottom right">力量代表肌肉力量、運動訓練、及能發揮多少肉體潛能</div></div>
+			<div id="DEX" class="perkRow"><div class="row_key">DEX</div><div class="tooltip bottom right">敏捷代表機敏度、反射速度、平衡力</div></div>
+			<div id="CON" class="perkRow"><div class="row_key">CON</div><div class="tooltip bottom right">體魄代表健康、耐力、生命力</div></div>
+			<div id="INT" class="perkRow"><div class="row_key">INT</div><div class="tooltip bottom right">智力代表思考速度、記憶力、邏輯能力</div></div>
+			<div id="WIS" class="perkRow"><div class="row_key">WIS</div><div class="tooltip bottom right">感知代表你對外在環境的觸覺，反映觀察力和洞察力</div></div>
+			<div id="CHA" class="perkRow"><div class="row_key">CHA</div><div class="tooltip bottom right">魅力量度你跟他人有效地交流的能力。它代表了信心、口才，也能代表迷人或有力的個性</div></div>
+			<div id="TIME" class="perkRow"><div class="row_key">TIME</div><div class="tooltip bottom right">時刻</div></div>
+			<div id="SCORE" class="perkRow"><div class="row_key">SCORE</div><div class="tooltip bottom right">得分</div></div>
 		</div>	
 		<div id="inventory" data-legend="物品:">			
 		</div>	
