--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="wrapper"></div>
 
 	<div id="dashboard">
-		<div id="perks" data-legend="伊莎貝拉:">
+		<div id="perks" class="menu" data-legend="伊莎貝拉">
 			<div id="HP" class="perkRow"><div class="row_key">HP</div><div class="tooltip bottom right">生命值</div></div>
 			<div id="MP" class="perkRow"><div class="row_key">MP</div><div class="tooltip bottom right">魔法值</div></div>
 			<div id="SP" class="perkRow"><div class="row_key">SP</div><div class="tooltip bottom right">體力值</div></div>
@@ -23,8 +23,10 @@
 			<div id="TIME" class="perkRow"><div class="row_key">TIME</div><div class="tooltip bottom right">時刻</div></div>
 			<div id="SCORE" class="perkRow"><div class="row_key">SCORE</div><div class="tooltip bottom right">得分</div></div>
 		</div>	
-		<div id="inventory" data-legend="物品:">			
-		</div>	
+		<div id="inventory" class="menu" data-legend="物品">			
+		</div>
+		<div id="abilities" class="menu" data-legend="能力">						
+		</div>
 	</div>
 </body>
 </html>
