--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<div id="HP" class="perkRow"><div class="row_key">HP</div><div class="tooltip bottom right">生命值</div></div>
 			<div id="MP" class="perkRow"><div class="row_key">MP</div><div class="tooltip bottom right">魔法值</div></div>
 			<div id="SP" class="perkRow"><div class="row_key">SP</div><div class="tooltip bottom right">體力值</div></div>
+			<div id="ATK" class="perkRow"><div class="row_key">ATK</div><div class="tooltip bottom right">攻擊力</div></div>
+			<div id="DEF" class="perkRow"><div class="row_key">DEF</div><div class="tooltip bottom right">防御力</div></div>
 			<div id="STR" class="perkRow"><div class="row_key">STR</div><div class="tooltip bottom right">力量代表肌肉力量、運動訓練、及能發揮多少肉體潛能</div></div>
 			<div id="DEX" class="perkRow"><div class="row_key">DEX</div><div class="tooltip bottom right">敏捷代表機敏度、反射速度、平衡力</div></div>
 			<div id="CON" class="perkRow"><div class="row_key">CON</div><div class="tooltip bottom right">體魄代表健康、耐力、生命力</div></div>
