--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 		</div>	
 		<div id="inventory" class="menu" data-legend="物品">			
 		</div>
-		<div id="abilities" class="menu" data-legend="能力">						
+		<div id="equipment" class="menu" data-legend="裝備">	
+			<div id="weapon" class="perkRow"><div class="row_key">武器</div><div class="tooltip bottom right"></div></div>
+			<div id="cloth" class="perkRow"><div class="row_key">衣服</div><div class="tooltip bottom right"></div></div>
+			<div id="accessories" class="perkRow"><div class="row_key">飾品</div><div class="tooltip bottom right"></div></div>
+		</div>		
+		<div id="abilities" class="menu" data-legend="能力">					
 		</div>
 	</div>
 </body>
