--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 				</ul>
 			</span>
 		</span>
-		<span class="hyper menuBtn">模組</span>
-		<span class="menuBtn">分享</span>
-		<span class="menuBtn">保存</span>
+		<span id="mod" class="hyper menuBtn">模組</span>
+		<span id="share" class="menuBtn">分享</span>
+		<span id="save" class="menuBtn">保存</span>
 		<span id="map" class="menuBtn">地圖</span>
 		<span id="inventory" class="menuBtn">物品</span>
 		<span id="character" class="menuBtn">人物</span>
