Ready to add mouse event.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="style/menu.css">
 </head>
 <body>
-	<div id="canvas"></div>
+	<div id="ROT">
+		<div id="canvas"></div>
+	</div>
 	<div id="chat-wrapper">
 		<div id="chat-button">Chat</div>
 		<div id="chat-content" style="display: none;">
